# orchestrate

./: .gitignore  .orchestrate.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  go.mod  go.sum  main.go  renovate.json5
.buildkite/: pipeline.yml
.buildkite/hooks/: pre-command
.github/workflows/: ci.yaml  code-freeze-bypass.yaml  release-please.yaml  stale.yaml
agents/: agents.go  agents_test.go
config/: appsettings.go  appsettings_test.go  config.go  config_test.go  session.go
docs/: index.html
example_dispatches/: settings.yaml
example_orchestrates/: .orchestrate.yaml  orchestrate.yaml  settings.yaml
git/: git.go  git_test.go
git_utils/: git.go  git_test.go
internal/tui/: ui.go  ui_test.go
internal/tui/components/header/: header.go  header_test.go
internal/tui/components/launch/: launch.go  launch_test.go
internal/tui/components/presetsinfo/: presetsinfo.go
internal/tui/components/settingsform/: settingsform.go  settingsform_test.go
internal/tui/components/sidebar/: sidebar.go  (+1 more)
internal/tui/constants/: constants.go  messages.go
internal/tui/context/: context.go  context_test.go  styles.go
internal/tui/keys/: keys.go  keys_test.go
internal/tui/theme/: integration_test.go  theme.go  theme_test.go
launcher/: launcher.go  launcher_test.go
src/: agents.rs  git.rs  launcher.rs  lib.rs  main.rs  terminal.rs  util.rs
src/config/: appsettings.rs  mod.rs  preset.rs  session.rs
src/config/defaults/: settings.yaml
src/tui/: mod.rs
terminal/: terminal.go  terminal_test.go
tests/: e2e_launch.rs
util/: util.go  util_test.go
(+4 files in other folders)
