[package]
name = "orchestrate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
hex = "0.4"
rand = "0.8"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
tui-input = "0.8"
tui-textarea = "0.4"
unicode-width = "0.1"
dirs = "5.0"
tempfile = "3.10"
